--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,13 @@
 name: Python Publish Workflow
 on:
-  workflow_call:
+  push:
+    branches:
+      - main
 
 jobs:
   release-build:
     runs-on: ubuntu-latest
+    needs: validation
 
     steps:
       - name: Checkout repository
