--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,13 +7,13 @@ on:
 jobs:
   release-build:
     runs-on: ubuntu-latest
-    needs: validation
-
+    needs:
+    - validation
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-        - name: Set up Python 3.9
+      - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
@@ -23,8 +23,8 @@ jobs:
           pip install flit
 
       - name: Build and publish package
-      run: |
-        flit build
+        run: |
+          flit build
 
       - name: upload windows dists
         uses: actions/upload-artifact@v4
@@ -33,7 +33,8 @@ jobs:
           path: dist/
 
   release-publish:
-    needs: release-build
+    needs:
+    - release-build
     runs-on: ubuntu-latest
     permissions:
       id-token: write
