fix: Tidy up readme and remove extraneous files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "flit_core.buildapi"
 [project]
 name =  "skyboxremote"
 authors = [
-    {name = "dunnmj", email = "mat@dunnmj.co.uk"},
+    {name = "dunnmj", email = "dunnmj@users.noreply.github.com"},
 ]
 description = "A python library for controlling a sky box"
 readme = "README.md"
